# motivatedAutonomousAgent

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/action/: CMakeLists.txt
src/action/include/iCub/: actionModule.h  actionThread.h
src/action/src/: actionModule.cpp  actionThread.cpp  main.cpp
src/batterySensor/: CMakeLists.txt
src/batterySensor/include/iCub/: batterySensorModule.h  batterySensorThread.h
src/batterySensor/src/: batterySensorModule.cpp  batterySensorThread.cpp  main.cpp
src/decisionMaking/: CMakeLists.txt
src/decisionMaking/include/iCub/: approximateQAgent.h  decisionMakingModule.h  decisionMakingThread.h
src/decisionMaking/src/: approximateQAgent.cpp  decisionMakingModule.cpp  decisionMakingThread.cpp  main.cpp
src/iCubSimInteraction/: CMakeLists.txt
src/iCubSimInteraction/include/iCub/: iCubSimInteractionModule.h  iCubSimInteractionThread.h
src/iCubSimInteraction/src/: iCubSimInteractionModule.cpp  iCubSimInteractionThread.cpp  main.cpp
src/iCubeProcessor/: CMakeLists.txt
src/iCubeProcessor/include/iCub/: iCubeProcessorModule.h  iCubeProcessorThread.h
src/iCubeProcessor/src/: iCubeProcessorModule.cpp  iCubeProcessorThread.cpp  main.cpp
src/motivation/: CMakeLists.txt
src/motivation/include/iCub/: motivationModule.h  (+1 more)
src/motivation/src/: main.cpp  motivationModule.cpp  motivationThread.cpp
src/perception/: CMakeLists.txt
src/perception/src/: main.cpp  perceptionModule.cpp  perceptionThread.cpp
src/sleeping/: CMakeLists.txt
src/sleeping/src/: main.cpp  sleepingModule.cpp  sleepingThread.cpp
(+17 files in other folders)
