# Copyright: (C) 2022 Istituto Italiano di Tecnologia | Robotics, Brains and Cognitive Science
# Authors: Letícia Berto
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(batterySensor)
add_subdirectory(perception)
add_subdirectory(motivation)
add_subdirectory(decisionMaking)
add_subdirectory(action)
add_subdirectory(iCubSimInteraction)
add_subdirectory(sleeping)
add_subdirectory(iCubeProcessor)
